Send UDP packet, receive ICMP packet

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,5 @@ authors = ["Matt Kelly <matthew.joseph.kelly@gmail.com>"]
 edition = "2018"
 name = "traceroute-rs"
 version = "0.1.0"
-
 [dependencies]
+pnet = "*"
